2006-04-22    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (_bidamount_as_text): new private method
	(_bidcount_as_text): new private method
	(result_as_HTML): new method
	(parse_price): set sold() on results (as suggested by Nick Lokkju)
	(_parse_category_list): new private method

2006-04-21    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (_bid_as_text): new method
	(result_as_HTML): new method

2006-03-22    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (parse_tree): don't use the Switch module

2006-03-11    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (parse_enddate): now can take a string argument

2006-02-18    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (parse_tree): enhanced to parse Completed listings

2005-12-27    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay/ByBidderID.pm: new backend!

	* lib/WWW/Search/Ebay.pm (parse_tree): use new item_number (et al.) attributes in SearchResult

2005-12-25    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (parse_tree): now returns the item's category number

2005-08-29    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay/Stores.pm (native_setup_search): fixed the CGI options

2005-08-27    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm (parse_tree): determine order of columns dynamically

2005-08-18    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay/Stores.pm (columns): damn ebay.com changed the column order again

	* lib/WWW/Search/Ebay.pm (columns): damn ebay.com changed the column order again
	(parse_price): watch for running off the end of the Stores list

	* lib/WWW/Search/Ebay/BuyItNow.pm (columns): damn ebay.com changed the column order again

2005-08-16    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay.pm: new flexible way of parsing table cells in a backend-specific order!

	* lib/WWW/Search/Ebay/BuyItNow.pm (columns): new method

	* lib/WWW/Search/Ebay/Motors.pm (columns): new method

	* lib/WWW/Search/Ebay/Stores.pm (columns): new method

	* lib/WWW/Search/Ebay/UK.pm (columns): new method

2005-08-14    <Daddy@C-3PO>

	* lib/WWW/Search/Ebay/BySellerID.pm: NEW BACKEND