@@ -2,11 +2,12 @@
 This is a backend for use with the WWW::Search module.
 
 Please read the README for WWW::Search for general information.
-
 (One place to find it is
 http://www.perl.com/CPAN-local/modules/by-module/WWW/WWW-Search-2.45.readme
 )
 
-Read the ChangeLog file in this distribution to see what is new with
+Read the Changes file in this distribution to see what is new with
 this backend since the previous release.
 
+Please visit http://www.sandcrawler.com/SWB/cpan-modules.html
+for more information.
